appId: swmansion.enriched.example
---
# PR #401 - fix(Android): newline insertion in lists
- launchApp

- tapOn:
    id: "toggle-screen-button"

- tapOn:
    id: "editor-input"

- tapOn:
    id: "toolbar-ordered-list"

- runFlow:
    when:
        platform: android
    commands: 
        - inputText: "XXXXXXXXXXXXXXXXXXXXXXXX"
        - tapOn:
            id: "editor-input"
            point: "50%,50%"
- runFlow:
    when:
        platform: ios
    commands: 
        - inputText: "XXXXXXXXXXX XXXXXXXXXXXXX"
        - tapOn:
            id: "editor-input"
            point: "50%,50%"
        - pressKey: Backspace


- pressKey: Enter

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
      SCREENSHOT_NAME: "list_newline_insertion"
