appId: swmansion.enriched.example
tags:
  - android-only
---
# Validates that ellipsizeMode "tail" truncates long text at the end
- launchApp

- tapOn:
    id: 'toggle-screen-button'

- tapOn:
    id: 'toggle-enriched-text-screen-button'

- runFlow:
    file: '../subflows/set_enriched_text_value.yaml'
    env:
      VALUE: >
        <html><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></html>

- tapOn:
    id: 'number-of-lines-1-button'

- assertVisible: 'numberOfLines: 1'

- tapOn:
    id: 'ellipsize-tail-button'

- assertVisible: 'ellipsizeMode: tail'

- runFlow:
    file: '../subflows/capture_or_assert_screenshot.yaml'
    env:
      SCREENSHOT_NAME: 'ellipsize_tail'
